--- a/app/src/main/res/drawable/ic_line.xml
+++ b/app/src/main/res/drawable/ic_line.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
         android:width="4dp"
-        android:height="64dp"
+        android:height="48dp"
         android:viewportWidth="24.0"
         android:viewportHeight="24.0">
     <path
-        android:fillColor="#FF000000"
+        android:fillColor="#3F51B5"
         android:pathData="M6,6h12v12H6z"/>
 </vector>
